# careerclaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  README.md  SECURITY.md  SKILL.md  pyproject.toml  sources.py  update.sh
.github/workflows/: ci.yml  enforce-branch-policy.yml  publish-careerclaw-sandbox.yml  require-dev-to-main.yml
adapters/: hackernews.py  remoteok.py
careerclaw/: briefing.py  cli.py  config.py  drafting.py  gap.py  license.py  models.py  requirements.py  resume_intel.py  sources.py  tracking.py
careerclaw/adapters/: hackernews.py
careerclaw/core/: text_processing.py
careerclaw/io/: resume_loader.py
careerclaw/llm/: __init__.py  enhancer.py  prompt.py
careerclaw/matching/: __init__.py  engine.py  scoring.py  text.py  types.py
docker/: Dockerfile.sandbox  Dockerfile.sandbox.careerclaw  Dockerfile.sandbox.local  docker-compose.yml  openclaw.yml
docs/: data-schema.md
scripts/: smoke_test_license.py  smoke_test_sources.py
tests/: conftest.py
tests/contract/: test_adapters.py
tests/fixtures/: hn_comment_1.json  hn_comment_2.json  hn_thread.json  remoteok_sample.xml  resume_fixture.txt
tests/unit/: test_briefing_orchestration.py  test_config.py  test_failover_draft_enhancer.py  test_hn_header_parsing.py  test_license.py  test_llm_enhancer.py  test_llm_failover_config.py  test_matching_engine.py  test_matching_scoring.py  test_prompt.py  test_requirements_gap.py  test_resume_intel.py  test_sources.py  test_text_processing.py  test_tracking_repository.py
